# mrgen

./: Cargo.toml  index.html  justfile
.github/workflows/: build.yaml  check.yaml
src/: components.rs  main.rs  roller.rs
src/generators/: characters.rs  city.rs  magic.rs  mod.rs  monsters.rs  npcs.rs
